* Prepend "named" to named BNodes to ensure no overlap between generated and named BNodes.
* Added Graph#clone and Triple#clone
* Merge Graphs, replacing BNodes with new values from new graph.
* Remove duplicate triples when adding or merging graphs
* Added Abstract Store and List Store.
* Delegate Graph methods to store. Currently only supports :list.
* Reduce dependence on HTML namespace in RDFa parser.
* Add RDFa tests for HTML4 and HTML5

=== 0.1.5
* Update RDFa tests to use Reddy RDF/XML parser.
* All negative RDF/XML parser tests pass.
* Add Reddy::Parser, super-class of other parsers and move common code.
* Change N3Parser to use same new/parse logic as other parsers.
* Remove debug array by default, and add in calls to tests.
=== 0.1.4
* Update N3 treetop parser to version 1.4.0 (no digits in parser rule names).
* Fix N3 literal handling (still has bug with escaped double quote).
* Handle N3 <#> prefix.
* Don't output lang for typed literals in n3 format
* Rewrite of RDF/XML parser based on spec; passes existing tests.
* Update rdfcore tests based on rdfa test harness.
* Move Literal string escape/unescape to string_hacks.
* Fix literal n3_encoded parsing.
* All positive RDF/XML parser tests pass.

=== 0.1.3
* Added rdfa-test-suite as sub-module and refactored RDFa tests to use them.
* Fix but in white-space separated attributes
* Downcase XHTML reserved words

=== 0.1.2
* Move most test-case logic into rdfa_helper.
* Separate approved and unreviewed tests.
* Allow for soft failure of unreviewed tests by catching Spec::Expectations::ExpectationNotMetError.
* Integrate rdfa-test-suite and create test cases in the same manner. (Causing SPARQL problems with XMLLiterals)

=== 0.1.1 / 2009-11-01
* Changes from rdfa_parser project.

=== 0.1.0 / 2008-12-02

* First public alpha. RDF/XML parsing works but is not fully spec or test compliant. There is much work to be done.