@@ -1,2 +1,0 @@
-require 'test/unit'
-require File.dirname(__FILE__) + '/../lib/reddy'
