@@ -1,11 +1,0 @@
-require File.dirname(__FILE__) + '/test_helper.rb'
-
-class TestReddy < Test::Unit::TestCase
-
-  def setup
-  end
-  
-  def test_truth
-    assert true
-  end
-end
